Apply review suggestion